--- a/src/style.css
+++ b/src/style.css
@@ -1,16 +1,37 @@
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  margin: 0;
   padding: 1rem;
   font-family: system-ui, sans-serif;
   color: black;
-  background-color: white;
+  background-color: rgb(194, 192, 192);
 }
 
-h1 {
+h2 {
   font-weight: 800;
   font-size: 1.5rem;
+  text-align: center;
+}
+input {
+  padding: 7px;
+  border-radius: 5px;
+  border: 1px grey solid;
+}
+button {
+  padding: 7px;
+  margin-left: 10px;
+  border-radius: 5px;
+  border: 1px grey solid;
+  background-color: green;
+  cursor: pointer;
+}
+ul {
+  margin: 20px;
+}
+li {
+  margin-block: 0.5rem;
 }
